2006-08-04  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/SideBar: Add new module.
	* src/Filters/Rules/Event/Makefile.am (pkgdata_PYTHON): Ship new files.
	* src/Filters/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/DataViews/_EventView.py: Add sidebar filter.
	* src/FilterEditor/_FilterEditor.py: Support event filters.
	* src/Filters/__init__.py: expose new module.
	* src/Filters/_PersonSidebarFilter.py: Fix type handling.
	* src/Filters/_FamilySidebarFilter.py: Fix type handling.
	* src/Filters/_GenericFilter.py: Support event filters.
	* src/Filters/_EventSidebarFilter.py: add new module.
	* src/Filters/Rules/Events/*.py: add new rules.
	* src/Filters/Rules/Family/_HasRelType.py (apply): Use new API.
	* src/FilterEditor/_EditFilter.py: Support invert attribute.
	* src/Filters/_GenericFilter.py: Support invert attribute.
	* src/Filters/_FilterList.py (save): Save invert attribute.
	* src/Filters/_FilterParser.py (startElement): Parse invert attribute.
	* src/Filters/Rules/Family/__init__.py (editor_rule_list): Import
	and use new rule.
	* src/Filters/Rules/Family/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/Filters/Rules/Family/_HasAttribute.py: Add new rule.
	* src/Filters/Rules/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/Filters/Rules/_HasAttributeBase.py: Add base module.
	* src/Filters/Rules/_HasEventBase.py (apply): Use new API.
	* src/Filters/Rules/Person/_HasFamilyEvent.py (apply): Use new API.
	* src/Filters/Rules/Person/_PersonWithIncompleteEvent.py
	(apply): Do not double-handle birth and death events.
	* src/Filters/Rules/Person/_IsWitness.py: Rewrite with new API.
	* src/FilterEditor/_FilterEditor.py (__init__): Remove unneeded
	argument, namespace is enough to get the filter class via factory;
	(add_new_filter): Use factory; (get_all_handles): Get handles for
	any object type.
	* src/FilterEditor/_ShowResults.py (get_name_id): Add method to
	return name and id for different object types;