@@ -51,4 +51,7 @@ class MotherHasIdOf(HasGrampsId):
     def apply(self,db,family):
         mother_handle = family.get_mother_handle()
         mother = db.get_person_from_handle(mother_handle)
-        return HasGrampsId.apply(self,db,mother)
+        if mother:
+            return HasGrampsId.apply(self,db,mother)
+        else:
+            return False
